loss scenario elaboration

--- a/02_SCRE_System_Description.ipynb
+++ b/02_SCRE_System_Description.ipynb
@@ -45,7 +45,10 @@
       "outputs": [],
       "source": [
         "#@title Cloudflare Tunnel Authentication\n",
-        "env.Tunnel()"
+        "try:\n",
+        "  env.Tunnel()\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
       ]
     },
     {
@@ -59,7 +62,10 @@
       "outputs": [],
       "source": [
         "#@title GENESYS Login & Project Selection\n",
-        "env.Login()"
+        "try:\n",
+        "  env.Login()\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
       ]
     },
     {
@@ -81,7 +87,10 @@
       "outputs": [],
       "source": [
         "#@title Initialize System Description\n",
-        "sd = manb.SystemDescription(env)"
+        "try:\n",
+        "  sd = manb.SystemDescription(env)\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
       ]
     },
     {
@@ -94,7 +103,10 @@
       "outputs": [],
       "source": [
         "#@title Use Case Diagrams\n",
-        "sd.UseCaseDiagrams()"
+        "try:\n",
+        "  sd.UseCaseDiagrams()\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
       ]
     },
     {
@@ -107,7 +119,10 @@
       "outputs": [],
       "source": [
         "#@title Use Case Table\n",
-        "sd.UseCaseTable()"
+        "try:\n",
+        "  sd.UseCaseTable()\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
       ]
     },
     {
@@ -160,7 +175,10 @@
       "outputs": [],
       "source": [
         "#@title System ***Context*** & ***Control Structure*** Diagram\n",
-        "sd.ControlStructureDiagram()"
+        "try:\n",
+        "  sd.ControlStructureDiagram()\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
       ]
     },
     {
@@ -173,7 +191,10 @@
       "outputs": [],
       "source": [
         "#@title System ***Control Actions***\n",
-        "sd.ControlActionTable()"
+        "try:\n",
+        "  sd.ControlActionTable()\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
       ]
     },
     {
@@ -186,7 +207,10 @@
       "outputs": [],
       "source": [
         "#@title Message Sequence Diagrams\n",
-        "sd.MSCDiagrams()"
+        "try:\n",
+        "  sd.MSCDiagrams()\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
       ]
     }
   ],
