--- a/05_SCRE_Resilience_Architecture.ipynb
+++ b/05_SCRE_Resilience_Architecture.ipynb
@@ -3,17 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/05_SCRE_Resilience_Architecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8t7y0zGTsoHt"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/05_SCRE_Resilience_Architecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -32,8 +23,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "6l3GIZt8soHw",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "6l3GIZt8soHw"
       },
       "outputs": [],
       "source": [
@@ -47,8 +38,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "L4g52IOhsoHx",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "L4g52IOhsoHx"
       },
       "outputs": [],
       "source": [
@@ -56,15 +47,15 @@
         "try:\n",
         "  env.Tunnel()\n",
         "except NameError:\n",
-        "  print(\"Notebook not yet initialized - see above\")  "
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "VuDq3hXUsoHy",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "VuDq3hXUsoHy"
       },
       "outputs": [],
       "source": [
@@ -72,7 +63,7 @@
         "try:\n",
         "  env.Login()\n",
         "except NameError:\n",
-        "  print(\"Notebook not yet initialized - see above\")"
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
       ]
     },
     {
@@ -86,71 +77,99 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#@title Initialize Resilience Architecture Analysis\n",
-        "try:\n",
-        "  arch = manb.ResilienceArchitecture(env)\n",
-        "except NameError:\n",
-        "  print(\"Notebook not yet initialized - see above\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "cEcfjA_Wv6ox"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#@title Initialize Resilience Architecture Analysis\n",
+        "try:  \n",
+        "  arch = manb.ResilienceArchitecture(env)\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Loss Scenario Elaboration"
-      ],
       "metadata": {
         "id": "EcSrZejduI2Y"
-      }
+      },
+      "source": [
+        "## Loss Scenario Elaboration"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "mlMI4cJtvDal"
+      },
       "source": [
         "### MBSE for Loss Scenario Elaboration\n",
         "\n",
         "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-loss-scenario-elaboration.png\" height=\"350\" />\n"
-      ],
-      "metadata": {
-        "id": "mlMI4cJtvDal"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "dqE0066I39zZ"
       },
+      "outputs": [],
+      "source": [
+        "#@title Resilient Modes Table\n",
+        "try:  \n",
+        "  arch.ResilientModeTable()\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title Loss Scenario Elaboration Table\n",
+        "try:  \n",
+        "  arch.LossScenarioElaborationTable()\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title Loss Scenario Message Sequence Diagrams\n",
+        "\n",
+        "arch.LossScenarioMSCDiagrams()\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Requirements Elicitation"
-      ],
       "metadata": {
         "id": "YRw84C4puPyw"
-      }
+      },
+      "source": [
+        "## Requirements Elicitation"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "3-cqnS1JvLXY"
+      },
       "source": [
         "\n",
         "### MBSE for Requirements Elicitation\n",
         "\n",
         "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-requirements-elicitation.png\" height=\"350\" />\n"
-      ],
-      "metadata": {
-        "id": "3-cqnS1JvLXY"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -160,11 +179,22 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "#@title Loss Scenario / Remediation Elicted Requirements Table\n",
+        "try:  \n",
+        "  arch.ElicitedRequirementsTable()\n",
+        "except NameError:\n",
+        "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "05_SCRE_Resilience_Architecture.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
     "interpreter": {
       "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
     },
@@ -185,14 +215,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.8.10"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "05_SCRE_Resilience_Architecture.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true,
-      "include_colab_link": true
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
