expand all sections

--- a/01_SCRE_DE_Textbook.ipynb
+++ b/01_SCRE_DE_Textbook.ipynb
@@ -412,10 +412,7 @@
   ],
   "metadata": {
     "colab": {
-      "collapsed_sections": [
-        "KWIkt5qn30EB",
-        "9jBXI3ELOMtI"
-      ],
+      "collapsed_sections": [],
       "name": "01_SCRE_DE_Textbook.ipynb",
       "private_outputs": true,
       "provenance": [],
