switch to itables. resilience arch tables

--- a/05_SCRE_Resilience_Architecture.ipynb
+++ b/05_SCRE_Resilience_Architecture.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/05_SCRE_Resilience_Architecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -20,6 +20,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Download & Install Notebook Packages"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -28,10 +35,17 @@
       },
       "outputs": [],
       "source": [
-        "#@title Download & Install Notebook Packages\n",
+        "# Run Initialze Notebook\n",
         "%pip install -q manb\n",
         "import manb\n",
         "env = manb.Environment('https://genesys.mission-aware.net', '/api/v1/')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Cloudflare Tunnel Authentication"
       ]
     },
     {
@@ -43,11 +57,18 @@
       },
       "outputs": [],
       "source": [
-        "#@title Cloudflare Tunnel Authentication\n",
+        "# Run Cloudflare Tunnel Authentication\n",
         "try:\n",
         "  env.Tunnel()\n",
         "except NameError:\n",
         "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## GENESYS Login & Project Selection"
       ]
     },
     {
@@ -59,7 +80,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title GENESYS Login & Project Selection\n",
+        "# Run GENESYS Login & Project Selection\n",
         "try:\n",
         "  env.Login()\n",
         "except NameError:\n",
@@ -76,6 +97,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Initialize Resilience Architecture Analysis"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -84,7 +112,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Initialize Resilience Architecture Analysis\n",
+        "# Initialize Resilience Architecture Analysis\n",
         "try:  \n",
         "  arch = manb.ResilienceArchitecture(env)\n",
         "except NameError:\n",
@@ -112,19 +140,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Resilient Modes Table\n",
+        "Definition: \"Effectiveness\" (High / Medium / Low) of Resilient Mode's \n",
+        "ability to remediate high \"likelihood\" attacks (Loss Scenarios) that are\n",
+        "associated with high \"mission impact/consequence\" Losses."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "dqE0066I39zZ",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "dqE0066I39zZ"
       },
       "outputs": [],
       "source": [
-        "#@title Resilient Modes Table\n",
+        "# Generate Resilient Modes Table\n",
         "try:  \n",
         "  arch.ResilientModeTable()\n",
         "except NameError:\n",
         "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Loss Scenario Elaboration Table"
       ]
     },
     {
@@ -136,11 +181,18 @@
       },
       "outputs": [],
       "source": [
-        "#@title Loss Scenario Elaboration Table\n",
+        "# Generate Loss Scenario Elaboration Table\n",
         "try:  \n",
         "  arch.LossScenarioElaborationTable()\n",
         "except NameError:\n",
         "  print(\"\\033[2;31mERROR:\\033[0;0m Notebook not yet initialized - see above.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Loss Scenario Message Sequence Diagrams"
       ]
     },
     {
@@ -152,7 +204,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Loss Scenario Message Sequence Diagrams\n",
+        "# Generate Loss Scenario Message Sequence Diagrams\n",
         "try:\n",
         "  arch.LossScenarioMSCDiagrams()\n",
         "except NameError:\n",
@@ -174,22 +226,28 @@
         "id": "3-cqnS1JvLXY"
       },
       "source": [
-        "\n",
         "### MBSE for Requirements Elicitation\n",
         "\n",
         "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-requirements-elicitation.png\" height=\"350\" />\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Loss Scenario / Remediation Eliced Requirements Table"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "6AGnw-fGsoHy",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "6AGnw-fGsoHy"
       },
       "outputs": [],
       "source": [
-        "#@title Loss Scenario / Remediation Elicted Requirements Table\n",
+        "# Generate Loss Scenario / Remediation Elicted Requirements Table\n",
         "try:  \n",
         "  arch.ElicitedRequirementsTable()\n",
         "except NameError:\n",
@@ -200,11 +258,11 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "05_SCRE_Resilience_Architecture.ipynb",
-      "provenance": [],
-      "toc_visible": true,
       "private_outputs": true,
-      "include_colab_link": true
+      "provenance": [],
+      "toc_visible": true
     },
     "interpreter": {
       "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
