--- a/05_SCRE_Resilience_Architecture.ipynb
+++ b/05_SCRE_Resilience_Architecture.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/05_SCRE_Resilience_Architecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -21,7 +21,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Xoxr066CBTqF"
+      },
       "source": [
         "## Download & Install Notebook Packages"
       ]
@@ -35,6 +37,7 @@
       },
       "outputs": [],
       "source": [
+        "#@title\n",
         "# Run Initialze Notebook\n",
         "%pip install -q manb\n",
         "import manb\n",
@@ -43,7 +46,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "jOSRjc7OBTqH"
+      },
       "source": [
         "## Cloudflare Tunnel Authentication"
       ]
@@ -57,6 +62,7 @@
       },
       "outputs": [],
       "source": [
+        "#@title\n",
         "# Run Cloudflare Tunnel Authentication\n",
         "try:\n",
         "  env.Tunnel()\n",
@@ -66,7 +72,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "D54AQ-UVBTqI"
+      },
       "source": [
         "## GENESYS Login & Project Selection"
       ]
@@ -80,6 +88,7 @@
       },
       "outputs": [],
       "source": [
+        "#@title\n",
         "# Run GENESYS Login & Project Selection\n",
         "try:\n",
         "  env.Login()\n",
@@ -98,7 +107,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "v9Cl3uUWBTqN"
+      },
       "source": [
         "## Initialize Resilience Architecture Analysis"
       ]
@@ -112,6 +123,7 @@
       },
       "outputs": [],
       "source": [
+        "#@title\n",
         "# Initialize Resilience Architecture Analysis\n",
         "try:  \n",
         "  arch = manb.ResilienceArchitecture(env)\n",
@@ -141,7 +153,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "sA111FhCBTqP"
+      },
       "source": [
         "### Resilient Modes Table\n",
         "Definition: \"Effectiveness\" (High / Medium / Low) of Resilient Mode's \n",
@@ -158,6 +172,7 @@
       },
       "outputs": [],
       "source": [
+        "#@title\n",
         "# Generate Resilient Modes Table\n",
         "try:  \n",
         "  arch.ResilientModeTable()\n",
@@ -167,7 +182,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "mbjtz4-4BTqP"
+      },
       "source": [
         "### Loss Scenario Elaboration Table"
       ]
@@ -181,6 +198,7 @@
       },
       "outputs": [],
       "source": [
+        "#@title\n",
         "# Generate Loss Scenario Elaboration Table\n",
         "try:  \n",
         "  arch.LossScenarioElaborationTable()\n",
@@ -190,7 +208,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "n0KOonqABTqQ"
+      },
       "source": [
         "### Loss Scenario Message Sequence Diagrams"
       ]
@@ -204,6 +224,7 @@
       },
       "outputs": [],
       "source": [
+        "#@title\n",
         "# Generate Loss Scenario Message Sequence Diagrams\n",
         "try:\n",
         "  arch.LossScenarioMSCDiagrams()\n",
@@ -233,7 +254,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "A8fsh2VsBTqR"
+      },
       "source": [
         "### Loss Scenario / Remediation Eliced Requirements Table"
       ]
@@ -247,6 +270,7 @@
       },
       "outputs": [],
       "source": [
+        "#@title\n",
         "# Generate Loss Scenario / Remediation Elicted Requirements Table\n",
         "try:  \n",
         "  arch.ElicitedRequirementsTable()\n",
@@ -258,11 +282,11 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "include_colab_link": true,
       "name": "05_SCRE_Resilience_Architecture.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "interpreter": {
       "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
